--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "description": "Build a REST API in minutes using Express + MongoDB",
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+	"scaffold",
+	"express",
+	"mongo",
+	"rest",
+	"web"
   ],
   "homepage": "https://github.com/brianviveiros/generator-express-rest",
   "bugs": "https://github.com/brianviveiros/generator-express-rest/issues",
